# AwsCli2Code

./: Cargo.toml  LICENSE
src/: main.rs
src/awssdk/: awssdk.rs  definition_parser.rs  mod.rs
src/cli/: mod.rs
src/generator/: mod.rs
src/generator/java/: mod.rs
src/generator/javascript/: mod.rs
src/parser/: jmespath.rs  mod.rs  parser.rs
src/text/: mod.rs
