[package]
name = "aws2code"
version = "0.1.0"
authors = ["Hunter Werlla <werlla@amazon.com>"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "aws2code"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
jmespath = { git = "https://github.com/jmespath/jmespath.rs" }
